# PRism-AI

./: .env.example  .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  Makefile  README.md  README_1.md  SETUP.md  docker-compose.yml  index.html  package-lock.json  package.json  policy.yaml  pyproject.toml  start.sh
.github/: dependabot.yml
.github/workflows/: auto-issue.yml  auto-pr.yml  code-evolution.yml  docker-build.yml  pr-review.yml  stale.yml
backend/: config.py  main.py  models.py  requirements.txt
backend/agents/: __init__.py  ask.py  changelog.py  describe.py  improve.py  labels.py  perf.py  review.py  security.py  self_review.py  test_gen.py
backend/core/: __init__.py  policy_engine.py  prompt_evolution.py  review_engine.py
backend/git_providers/: __init__.py  base.py  bitbucket_provider.py  gitea_provider.py  github_provider.py  gitlab_provider.py
backend/llm_backends/: __init__.py  base.py  bedrock_backend.py  ollama_backend.py  ollama_cloud_backend.py  openai_backend.py  vertex_backend.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx
src/: App.tsx  __init__.py  cli.py  config.py  evolution.py  policy.py  review_engine.py
src/api/: __init__.py  main.py  routes.py
src/components/: Dashboard.tsx  ReviewPanel.tsx  SettingsPanel.tsx
src/git_providers/: __init__.py  github_provider.py  gitlab_provider.py
src/llm_backends/: __init__.py  base.py  bedrock_backend.py  ollama_backend.py  openai_backend.py  vertex_backend.py
tests/: test_config.py  test_review_engine.py
